--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=web, noDatabase
+spring.profiles.active=web, database
 file=countries.json
 url=https://restcountries.eu/rest/v2/regionalbloc/eu?fields=name;capital;currencies;population;area
 spring.h2.console.enabled=true
