Database cleared when updated fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.profiles.active=web, database
+spring.jpa.hibernate.ddl-auto=create
 file=countries.json
 url=https://restcountries.eu/rest/v2/regionalbloc/eu?fields=name;capital;currencies;population;area
 spring.h2.console.enabled=true
